<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="single_player">Играй с приятел</string>
    <string name="multi_player">Играй онлайн</string>
    <string name="versus_ai">Игра срещу телефона</string>
    <string name="exit">Изход</string>
    <string name="title_activity_single_player">Игра с приятел</string>
    <string name="title_activity_ai">Игра срещу телефона</string>
    <string name="title_activity_multi_player">Игра онлайн</string>
    <string name="new_game">Нова игра</string>
    <string name="back_to_menu">Обратно в меню</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

</resources>