<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TicTacToe" >

    <Button
        android:id="@+id/multiPlayer"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/singlePlayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/multi_player" />

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/singlePlayer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/singlePlayer"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/multiPlayer"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:onClick="startSinglePlayer"
        android:text="@string/single_player" />

    <Button
        android:id="@+id/AIButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/multiPlayer"
        android:layout_below="@+id/multiPlayer"
        android:layout_marginTop="26dp"
        android:onClick="startAI"
        android:text="@string/versus_ai" />
    
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
      <Button
        android:id="@+id/sign_out_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout_from_google"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>
        
  

</RelativeLayout>